apps/pihole/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.jackhumes.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
  tls:
    secretName: pihole-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-http
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.jackhumes.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: pihole
spec:
  redirectScheme:
    scheme: https
    permanent: true
